[workspace]
members = [
    "poc_config/aws_wasi_host",
    "fn_build",
    "l3_base",
    "l3_cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.92"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
thiserror = "2.0.0"
temp-dir = "0.1.14"
tokio = { version = "1.41.0", features = ["full"] }

[workspace.package]
authors = ["Adam McKee <adam.be.g84d@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/eighty4/l3"
