[workspace]
members = [
    "ast_parse",
    "fn_build",
    "fn_build_wasm",
    "fn_config",
    "fn_env",
    "l3_base",
    "l3_cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.92"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
thiserror = "2.0.17"
temp-dir = "0.1.14"
tokio = { version = "1.43.0", default-features = false }

[workspace.package]
authors = ["Adam McKee <adam.be.g84d@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/eighty4/l3"

[profile.release]
lto = "fat"
opt-level = 3
strip = "symbols"
