[package]
name = "l3_fn_build"
version = "0.0.1"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[lib]
name = "l3_fn_build"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
rustpython-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swc = { workspace = true }
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_visit = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
temp-dir = { workspace = true }
