[package]
name = "l3_fn_build"
version = "0.0.2"
description = "Lib for Lambda function builds"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "l3_fn_build"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
l3_api_base = { path = "../l3_base", version = "0.0.2" }
rustpython-parser = "0.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
swc = "4.0.0"
swc_common = { version = "3.0.0", features = ["concurrent"] }
swc_ecma_ast = "3.0.0"
swc_ecma_parser = { version = "4.0.0", features = ["typescript"] }
swc_ecma_visit = { version = "3.0.0" }
thiserror = { workspace = true }
tokio = { workspace = true }
zip = "2.2.0"

[dev-dependencies]
temp-dir = { workspace = true }
