[package]
name = "l3_fn_build"
version = "0.0.4"
description = "Lib for Lambda function builds"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "l3_fn_build"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
l3_api_base = { path = "../l3_base", version = "0.0.4" }
rustpython-parser = "0.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
swc = "41.0.0"
swc_common = { version = "14.0.4", features = ["concurrent"] }
swc_ecma_ast = "15.0.0"
swc_ecma_parser = { version = "24.0.2", features = ["typescript"] }
swc_ecma_visit = { version = "15.0.0" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
temp-dir = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "test-util"] }
