[package]
name = "l3_fn_config"
version = "0.0.2-alpha.1"
description = "Parsing l3.toml config files"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
l3_fn_env = { path = "../fn_env", version = "0.0.2-alpha.1" }
thiserror = { workspace = true }
toml = { version = "0.8.20", features = ["parse"] }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
temp-dir = { workspace = true }
