[package]
name = "l3_fn_env"
version = "0.0.2-alpha.1"
description = "Parsing and merging .env files"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
temp-dir = { workspace = true }
