[package]
name = "l3_fn_sync"
version = "0.0.1"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "l3_fn_sync"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
l3_fn_build = { path = "../fn_build" }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
