[package]
name = "l3_fn_sync_aws"
version = "0.0.1"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "l3_fn_sync_aws"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
aws-config = "1.5.9"
aws-sdk-apigatewayv2 = "1.48.0"
aws-sdk-iam = "1.50.0"
aws-sdk-lambda = "1.53.0"
l3_fn_build = { path = "../fn_build" }
l3_fn_sync = { path = "../fn_sync" }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
