[package]
name = "l3_api_base"
version = "0.0.3"
description = "Shared APIs for LLL crates"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "l3_api_base"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
