[package]
name = "l3_cli"
version = "0.0.4"
description = "Lambda compute tooling"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "l3"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.25", features = ["derive"] }
l3_api_base = { path = "../l3_base", version = "0.0.4" }
l3_fn_build = { path = "../fn_build", version = "0.0.4" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "test-util"] }

[dev-dependencies]
