[package]
name = "l3_cli"
version = "0.0.5-alpha.1"
description = "Lambda compute tooling"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "l3"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.25", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
l3_api_base = { path = "../l3_base", version = "0.0.5-alpha.1" }
l3_fn_build = { path = "../fn_build", version = "0.0.5-alpha.1" }
l3_fn_config = { path = "../fn_config", version = "0.0.2-alpha.1" }
ratatui = "0.29.0"
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "test-util",
] }

[dev-dependencies]
