[package]
name = "aws_wasi"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
cap-std = { version = "3.3.0 "}
thiserror = { workspace = true }
wasmtime = { version = "25.0.1", features = ["component-model"]}
wasmtime-wasi = "25.0.1"
wasmtime-wasi-http = "25.0.1"
anyhow = "1.0.92"


